@@ -6,6 +6,8 @@ Changes after KWord-1.4 (in the branch)
    Fix for text:h without outline-level
    Simplified the XML by removing spurious <span> tags due to misspelled words
    Save office:font-face-decls tag so that OOo loads the fonts
+   Fixed loading of font sizes specified as a percentage
+   Implemented loading of list indentation (space-before) (#109223)
 
 Changes after KWord-1.4-beta1
 =============================
